# ChangeLog for games-kids/pytraffic
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-kids/pytraffic/ChangeLog,v 1.11 2010/04/25 15:38:49 tupone Exp $

  25 Apr 2010; Tupone Alfredo <tupone@gentoo.org> pytraffic-2.5.4.ebuild:
  Force python2 fixing bug #312253 by arfrever@gentoo.org

  22 Feb 2009; Raúl Porcel <armin76@gentoo.org> pytraffic-2.5.4.ebuild:
  x86 stable wrt #257812

  07 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org>
  pytraffic-2.5.4.ebuild:
  stable amd64, bug 257812

*pytraffic-2.5.4 (25 Apr 2007)

  25 Apr 2007; Tristan Heaven <nyhm@gentoo.org> +pytraffic-2.5.4.ebuild:
  Version bump

*pytraffic-2.5.3 (13 Oct 2006)

  13 Oct 2006; Tristan Heaven <nyhm@gentoo.org> +pytraffic-2.5.3.ebuild:
  Version bump

  25 Nov 2005; Luis Medinas <metalgod@gentoo.org> pytraffic-2.5.ebuild:
  Stable on amd64.

  12 Nov 2005; Michael Sterrett <mr_bones_@gentoo.org> pytraffic-2.5.ebuild:
  stable for x86

*pytraffic-2.5 (26 Aug 2005)

  26 Aug 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +files/2.5-gentoo-dirs.patch, +pytraffic-2.5.ebuild:
  version bump - patch from Algardas Pelakauskas via bug #103716

*pytraffic-2.0 (11 Jun 2005)

  11 Jun 2005; Fernando Serboncini <fserb@gentoo.org>
  +files/2.0-gentoo-dirs.patch, +pytraffic-2.0.ebuild:
  Version bump.

  22 Feb 2005; David Holm <dholm@gentoo.org> pytraffic-1.2.1.ebuild:
  Added to ~ppc.

*pytraffic-1.2.1 (30 Dec 2004)

  30 Dec 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by yselkowitz@hotmail.com #75976.