@@ -1,6 +1,10 @@
 # ChangeLog for games-kids/pytraffic
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-kids/pytraffic/ChangeLog,v 1.11 2010/04/25 15:38:49 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-kids/pytraffic/ChangeLog,v 1.12 2010/10/10 23:15:57 mr_bones_ Exp $
+
+  10 Oct 2010; Michael Sterrett <mr_bones_@gentoo.org>
+  pytraffic-2.5.4.ebuild:
+  EAPI=2 (bug #340401)
 
   25 Apr 2010; Tupone Alfredo <tupone@gentoo.org> pytraffic-2.5.4.ebuild:
   Force python2 fixing bug #312253 by arfrever@gentoo.org
